--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@ body {
   align-items: center;
 }
 
-.loginBtn {
+.loginSignBtn {
   background-color: #3cc295!important;  
 }
 
@@ -31,10 +31,6 @@ body {
   bottom: 0;
   left: 0;
   padding: 20px;
-}
-
-input:first-child {
-  /* line-height: 5; */
 }
 
 input:focus::placeholder {
