--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,41 +1,10 @@
-/* .App {
-  text-align: center;
+:root {
+  --primaryColor: rgb(218, 165, 32);
+  --secondaryColor: rgba(30, 28, 100, 1);
+  --tertiaryColor: #39a6b2;
+  --altPrimary: #7510f7;
+  --altSecondary: rgba(30, 28, 100, .7);
 }
-
-.App- {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 .noBg {
 	background: rgba(red, green, blue, 0);
