--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,7 @@ body {
   border-radius: 10px;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.205);
   text-align: center!important;
+
 }
 
 .loginForm {
@@ -35,6 +36,14 @@ body {
 
 .switchFormBtn {
   font-weight: bolder!important;
+}
+
+.clickSpanLink {
+  color:rgb(64, 131, 105) !important
+}
+
+.clickSpanLink :hover {
+  color: var(--secondaryColor)!important;
 }
 
 .imagesContainer {
@@ -84,7 +93,12 @@ input:focus::placeholder {
 
 .loginFont {
   color: black;
-  font-family: 'Roboto Slab', serif;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .disable-select {
@@ -120,5 +134,11 @@ input:focus::placeholder {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; */
 }
+
+@media only screen and (max-width: 600px) {
+  .loginSignBtn {
+    width: 100%!important;
+  }
+  }
